# agr_blastdb_manager

./: .dockerignore  .gitignore  CLAUDE.md  DATABASE_VALIDATION.md  Dockerfile  Makefile  PRD_VALIDATION_SYSTEM_INTEGRATION.md  README.md  Snakefile  TESTING_SUMMARY.md  pyproject.toml  requirements.txt  run_tests.py
.claude/: settings.local.json
.github/workflows/: README.md  flybase-db-update.yml  flybase-metadata-update.yml  test_update_blast_db.yml  update_blast_db.yml
agr_blastdb_manager/: __main__.py
agr_blastdb_manager/agr/: metadata.py  snakemake.py
agr_blastdb_manager/genbank/: genomes.py
agr_blastdb_manager/ncbi/: genomes.py  taxonomy.py
agr_blastdb_manager/pipelines/: flybase.py
conf/: global.yaml  metadata_schema.json  organisms.yaml
conf/flybase/: Drosophila_erecta.json  Drosophila_simulans.json  databases.json
conf/sgd/: databases.json
conf/wormbase/: database.WB.WS286.json  databases.json  databases_test.json
conf/xenbase/: databases.json
docs/: UI_TESTING_FRAMEWORK.md  prd_database_validation_integration.md  prd_executive_summary.md  prd_validation_executive_summary.md  prd_validation_visual_testing_and_logging.md  validation_enhancement_implementation_guide.md  validation_technical_design.md
scripts/: create_flybase_metadata.py  extract_org.pl  organisms.txt
slack/: test.py  test2.py
src/: .create_blast_db.py.swp  .env.example  create_blast_db.py  database_validator.py  pyproject.toml  requirements.txt  terminal.py  test_blast_databases.py  utils.py  validate_databases.py  validate_release.py  validation.py  validation_reporter.py  webhook_server.py
test_reports/: comprehensive_fb_tess_report.md  comprehensive_test_summary.md  fb_protein_report.md  fb_test_report.md  improved_wb_test.md  wb_test_report.md
tests/: QUICK_REFERENCE.md  README.md  conftest.py  run_tests.py  test_agr_blastdb_manager.py  test_blast_cli.sh  test_blast_databases.py  test_blast_databases.sh
tests/CLI/: config.json  test_cli.py
tests/UI/: README_locust.md  Readme_ui.md  config.json  locustfile.py  test_ui.py  utils.py
tests/blast_test_results/: .gitignore  TEST_REPORT.md
tests/cli/: __init__.py  test_cli.py  test_cli_comprehensive.py
tests/fixtures/: README.md  __init__.py  debug_test.fasta  fb_conserved.fasta  fb_real_genes.fasta  rgd_conserved.fasta  rgd_real_genes.fasta  rgd_specific_test.fasta  sgd_conserved.fasta  sgd_real_genes.fasta  sgd_test_sequence.fasta  test_databases_config.json  test_minimal_sequence.fasta  test_sequences.json  test_user_sequence.fasta  universal_conserved.fasta  universal_test_sequences.fasta  universal_test_sequences.py  wb_conserved.fasta  wb_real_genes.fasta  wb_test_sequence.fasta  xb_real_genes.fasta  zfin_conserved.fasta  zfin_real_genes.fasta
tests/integration/: __init__.py  test_infrastructure.py  test_integration.py
tests/performance/: __init__.py  test_performance.py
tests/ui/: README_locust.md  Readme_ui.md  __init__.py  config.json  generate_ui_config.py  generate_ui_config_simple.py  simple_test.py  test_blast_validation.py  test_ui.py  test_ui_compatible.py  test_ui_comprehensive.py  test_ui_debug.py  visual_regression.py
tests/unit/: test_agr_blastdb_manager.py  test_all_fb_dbs.py  test_all_mod_databases.py  (+11 more)
workflow/: Snakefile  blast_pipeline.py
(+8 files in other folders)
