[tool.poetry]
name = "agr-blastdb-manager"
version = "0.1.0"
description = ""
authors = ["Adam Wright, Paulo Nuin and the Alliance of Genome Resources"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.5.2"
click = "^8.1.6"
requests = "^2.31.0"
tqdm = "^4.65.0"
wget = "^3.2"
pyyaml = "^6.0.1"
boto3 = "^1.28.46"
py-fasta-validator = "^0.6"
python-dotenv = "^1.0.0"
slack-sdk = "^3.23.0"
numpy = "^1.26.4"
selenium = "^4.20.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
types-boto3 = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
