[tool.poetry]
name = "agr-blastdb-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "agr_blastdb_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.5.0"
click = "^8.1.6"
requests = "^2.31.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
